--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,33 @@
+# Emacs/vim
+*~
+*.swp
+
+# VSCode
+.vscode
+.classpath
+.project
+.settings/
+
+# IntelliJ
+.idea/
+
+# MacOS
+.DS_Store
+
+# Maven (from: https://github.com/github/gitignore/blob/master/Maven.gitignore)
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+.mvn/wrapper/maven-wrapper.jar
+
+# Java (from: https://github.com/github/gitignore/blob/master/Java.gitignore)
+
 # Compiled class file
 *.class
 
@@ -19,5 +49,5 @@
 *.tar.gz
 *.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+# Virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
