Add necessary packages for db

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,8 @@ buildNumber.properties
 
 # Package Files #
 *.jar
+!lib/mysql-connector-java-8.0.21.jar
+!lib/protobuf-java-3.11.4.jar
 *.war
 *.nar
 *.ear
