--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,6 @@ buildNumber.properties
 
 # Virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Project properties
+src/main/webapp/WEB-INF/MessageBoard_en_US.properties
